# Chatbot

./: ollama.py  pyproject.toml
