[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.3.0",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "cassio>=0.1.10",
    "chromadb>=1.3.2",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.0",
    "groq>=0.33.0",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.53",
    "langchain-groq>=0.1.5",
    "langchain-objectbox>=0.1.0",
    "langchain-openai>=0.1.7",
    "langchainhub>=0.1.21",
    "langserve>=0.2.3",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sse-starlette>=3.0.3",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
